[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/UI/prog_bar_back.png" type="Texture" id=1]
[ext_resource path="res://progressBarBase.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/prog_bar_prog.png" type="Texture" id=3]

[node name="progressBarBase" type="TextureProgress"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
texture_under = ExtResource( 1 )
texture_over = null
texture_progress = null
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 6
stretch_margin_right = 6
stretch_margin_bottom = 6
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Textures" ]
main_color = Color( 0.160784, 0.764706, 0.239216, 1 )
gain_color = Color( 0.152941, 0.207843, 0.776471, 1 )
lose_color = Color( 1, 0, 0, 1 )

[node name="progressBarHeal" type="TextureProgress" parent="." index="0"]

modulate = Color( 0.154861, 0.208356, 0.777344, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 215.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 6
stretch_margin_right = 6
stretch_margin_bottom = 6
_sections_unfolded = [ "Margin", "Textures", "Visibility" ]

[node name="progressBarHurt" type="TextureProgress" parent="." index="1"]

modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 101.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 6
stretch_margin_right = 6
stretch_margin_bottom = 6
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="progressBarCurrent" type="TextureProgress" parent="." index="2"]

modulate = Color( 0.161499, 0.765625, 0.241735, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 6
stretch_margin_right = 6
stretch_margin_bottom = 6
_sections_unfolded = [ "Textures", "Visibility" ]


